include ansible part in vagrant provision, avoid vmware check while on virtualbox, enable port forwarding; force pulledpork on first run, s/force-md5/force-hash/

--- a/playbooks/templates/suricata_overrides.yaml.j2
+++ b/playbooks/templates/suricata_overrides.yaml.j2
@@ -42,7 +42,8 @@ outputs:
               enabled: no
         - files:
             force-magic: no
-            force-md5: no
+            #force-md5: no
+            force-hash: [sha1,sha256]
         - stats:
             totals: yes
             threads: no
